# freenode

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GOVERNANCE.md  LICENSE  Makefile  README.ja.md  README.md  README.zh-CN.md  README.zh.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml  repo-metadata.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  source_report.md
.github/workflows/: ci.yml  codeql.yml  daily-update.yml  dependabot-auto-merge.yml  deploy-docs.yml  labeler.yml  source-check.yml  stale.yml  update-nodes.yml
backend/: .dockerignore  .env.example  Caddyfile  Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 952132086a7b_initial_schema.py  a1b2c3d4e5f6_add_source_meta.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: __init__.py  cache.py  crypto.py  logging_config.py  rate_limit.py  security.py
backend/app/models/: __init__.py  check.py  node.py  source.py
backend/app/pipeline/: __init__.py
backend/app/routers/: health_admin.py  nodes.py  sources.py  stats.py  subscriptions.py
backend/app/scheduler/: __init__.py  jobs.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_crypto.py  test_models.py  test_rate_limit.py  test_security.py
config/: sources.json
docs/: DEVELOPER_CHECKLIST.md  Gemfile  _config.yml  about.md  guides.html  index.html  robots.txt  sitemap.xml  sources.html
docs-site/: architecture.md  automation.md  beginner-guide.md  changelog.md  contributing.md  data-source-guide.md  data-sources.md  deployment.md  development.md  faq.md  future-directions.md  index.md  maintenance.md  package-lock.json  package.json  project-overview.md  security-audit.md  security.md  status.md
docs-site/.vitepress/: config.ts
docs-site/advanced/: client-comparison.md
docs-site/client-setup/: clash-verge-rev.md  clash.md  shadowrocket.md  v2rayn.md  v2rayng.md
docs/_data/: clients.json  protocols.json  site.json  sources.json  stats.json  subscriptions.json
docs/_includes/: meta-seo.html  section-title.html  stat-card.html  sub-card.html
docs/_layouts/: default.html
docs/assets/css/: style.css
guides/: CLIENTS.md  PROTOCOLS.md  SOURCES.md
landing/: index.html  style.css
nodes/: clash.yaml  discovered-sources.json  proxies.txt  quality.json  regions.json  sources-report.json  v2ray.txt
scripts/: check_secrets.sh  crawler.py  dedup.py  discover_sources.py  formatter.py  gen_og_image.py  parser.py  publish_mirrors.py  site_builder.py  telegram_source.py  update.py  utils.py  verifier.py
scripts/adapters/: __init__.py  base.py  git_repo.py  github_raw.py  html.py  rss.py  web_url.py
tests/: conftest.py  test_adapters.py  test_crawler.py  test_discover.py  test_formatter.py  test_formatter_sort.py  test_parser.py  test_publish_mirrors.py  test_security_hardening.py  test_telegram_source.py  test_update.py  test_utils.py  test_verifier.py
tools/: README.md  android.md  browser-extensions.md  ios.md  macos.md  windows.md
web/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: admin-login.tsx  client-card.tsx  copy-button.tsx  disclaimer-banner.tsx  distribution-bars.tsx  faq-section.tsx  feature-card.tsx  footer.tsx  navbar.tsx  nodes-explorer.tsx  pagination.tsx  protocol-chart.tsx  protocol-section.tsx  region-cloud.tsx  source-form.tsx  source-table.tsx  stat-card.tsx  stats-section.tsx  status-badge.tsx  step-card.tsx  subscribe-card.tsx
web/lib/: admin-api.ts  api-types.ts  api.ts  auth-store.ts  data.ts  news.ts  platforms.ts
(+26 files in other folders)
